# alglib

./: .gitignore  CMakeLists.txt  README.md  alglib.pri  index.html  manual.cpp.html
.github/workflows/: cmake.yml  static.yml
cmake/: ALGLIBConfig.cmake.in  utils.cmake
